# pikmreciever

./: .gitmodules  CMakeLists.txt  README.md  hook.sh  init.sh  pikmreciever.c  pikmreciever.code-workspace  pikmreciever.h  pikmreciever.service  run.sh  sync.sh
.devcontainer/: Dockerfile  devcontainer.json
include/: create-gadget-hid.c  create-gadget-hid.h  remove-gadget-hid.c  remove-gadget-hid.h
